@@ -30,6 +30,7 @@ tagged_union seL4_Fault seL4_FaultType {
 #ifdef CONFIG_ARM_HYPERVISOR_SUPPORT
     tag VGICMaintenance 7
     tag VCPUFault 8
+    tag VPPIEvent 9
 #endif
 #else
     -- arch specific faults
@@ -38,6 +39,7 @@ tagged_union seL4_Fault seL4_FaultType {
 #ifdef CONFIG_ARM_HYPERVISOR_SUPPORT
     tag VGICMaintenance 6
     tag VCPUFault 7
+    tag VPPIEvent 8
 #endif
 #endif
 
