@@ -51,6 +51,8 @@ LIBSEL4_INLINE_FUNC seL4_Fault_t seL4_getArchFault(seL4_MessageInfo_t tag)
         return seL4_Fault_VGICMaintenance_new(seL4_GetMR(seL4_VGICMaintenance_IDX));
     case seL4_Fault_VCPUFault:
         return seL4_Fault_VCPUFault_new(seL4_GetMR(seL4_VCPUFault_HSR));
+    case seL4_Fault_VPPIEvent:
+        return seL4_Fault_VPPIEvent_new(seL4_GetMR(seL4_VPPIEvent_IRQ));
 #endif /* CONFIG_ARM_HYPERVISOR_SUPPORT */
 #ifdef CONFIG_KERNEL_MCS
     case seL4_Fault_Timeout:
