@@ -103,6 +103,11 @@ Upcoming release: BINARY COMPATIBLE
   - Ram memory is part of this reservation and is instead handed out as regular Untypeds.
   - Memory reserved for use by the kernel or other reserved regions are not accessible via any untypeds.
   - Devices used by the kernel are also not accessible via any untypeds.
+* New fault type when running in Arm hypervisor mode: seL4_Fault_VPPIEvent
+    - The kernel can keep track of IRQ state for each VCPU for a reduced set of PPI IRQs and deliver IRQ events as
+      VCPU faults for these interrupt numbers.
+    - Additionally a new VCPU invocation is introduced: seL4_ARM_VCPU_AckVPPI.
+      This is used to acknowledge a virtual PPI that was delivered as a fault.
 
 ## Upgrade Notes
 
